# Style-Bert-VITS2-webapi

./: Dockerfile  Dockerfile.gpu  README.md  pyproject.toml
model_downloader/: downloader.py  initialize_1.py  initialize_2.py  initialize_3.py  initialize_4.py  initialize_5.py  initialize_6.py
utils/: my_logger.py
