[project]
name = "emotional-text-to-speech"
version = "0.1.0"
description = "A text-to-speech application with emotional expression"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "numpy",
    "torch",
    "transformers",
]
requires-python = ">=3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
pip = { version = ">=23.3.2" } 